BSONColumn validation reads uninitialized FCV for array compression feature flag check

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.0.0-rc1, 6.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v6.0
    • Execution Team 2022-05-02
    • 165
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The test-only hook _validateBSONColumnRoundtrip() for BSONColumn validation assumes that the FCV is initialized when it checks if array compression is enabled.

      This is not always the case especially in startupRepair() when repair::repairCollection() is called before we restore/initialize the FCV document.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: