SERVER-65704 always check array compression in test-only BSONColumn validation hook