src/mongo/db/catalog/collection_validation.cpp
@@ -469,18 +469,13 @@ void _validateBSONColumnRoundtrip(OperationContext* opCtx,
     constexpr size_t kMaxMemoryUsageBytes = 25 * 1024 * 1024;
     size_t currentMemoryUsageBytes = 0;
 
-    BSONColumnBuilder columnBuilder("",
-                                    feature_flags::gTimeseriesBucketCompressionWithArrays.isEnabled(
-                                        serverGlobalParams.featureCompatibility));
+    BSONColumnBuilder columnBuilder("", /*arrayCompression=*/true);
 
     auto doBSONColumnRoundtrip = [&]() {
         ON_BLOCK_EXIT([&] {
             // Reset the in-memory state to prepare for the next round of BSONColumn roundtripping.
             original.clear();
-            columnBuilder =
-                BSONColumnBuilder("",
-                                  feature_flags::gTimeseriesBucketCompressionWithArrays.isEnabled(
-                                      serverGlobalParams.featureCompatibility));
+            columnBuilder = BSONColumnBuilder("", /*arrayCompression=*/true);
             currentMemoryUsageBytes = 0;
         });
 
